--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
 
   <div class='header'><div class='headerinfo'><b>U.S. Tip Generator</b></div></div>
 
+  <input type='number' class=''>
+
+  <select name='tip-percent'>
+    <option>15%</option>
+    <option>16%</option>
+    <option>17%</option>
+    <option>18%</option>
+    <option>19%</option>
+    <option>20%</option>
+    <option>21%</option>
+    <option>22%</option>
+    <option>23%</option>
+    <option>24%</option>
+    <option>25%</option> <!--forms-->
+  </select>
+
   </body>
 
 </html>
